# rds

./: .gitignore  Cargo.toml  LICENSE  MILESTONES.md  NPM_PUBLISHING.md  README.md  index.js  install.js  package.json  rds.config.toml
.github/: copilot-instructions.md
.github/instructions/: code.instructions.md  rust.instructions.md
.github/workflows/: build.yml  verify.yml
.husky/: pre-commit  pre-push
plugin/: README.md  index.js  package.json
scripts/: build-target.js
src/: analysis_runner.rs  cli.rs  filesystem.rs  lib.rs  main.rs  utils.rs  watch.rs
src/analysis_runner/: mod.rs  tests.rs
src/analyzer/: circular.rs  mod.rs  tests.rs  tree.rs  unused.rs
src/analyzer/tree/: builder.rs  expand.rs  mod.rs  parse.rs  partition.rs  resolve.rs  reverse_index.rs  tests.rs
src/cache/: entry.rs  hash.rs  mod.rs  storage.rs  tests.rs
src/cli/: mod.rs  tests.rs
src/config/: mod.rs
src/filesystem/: mod.rs  tests.rs
src/logger/: mod.rs  tests.rs
src/output/: console.rs  json.rs  mod.rs  tests.rs  tree.rs
src/parser/: javascript.rs  mod.rs  resolver.rs  tests.rs  vue.rs
src/parser/plugins/: javascript.rs  mod.rs  tests.rs  vue.rs
src/parser/resolver/: tests.rs
src/types/: config.rs  dependency.rs  mod.rs  tests.rs
src/utils/: file_config.rs  mod.rs  path.rs  tests.rs
src/watch/: mod.rs  tests.rs
test/: HelloWorld.vue  MyComponent.vue  helper1.js  helper3.js  index.js
test/module/: circular_a.js  circular_b.js  circular_c.js  circular_d.js  circular_e.js  index.js  index_lib.js
test/typescript/: tsconfig.json
test/typescript/lib/: config.ts  helpers.ts  themes.ts
test/typescript/src/: App.tsx
test/typescript/src/components/: Button.tsx
test/typescript/src/types/: index.ts  user.ts
test/vue/: App.vue
test/vue/components/: Footer.vue  Header.vue  UserAvatar.vue  UserProfile.vue
test/vue/utils/: api.js  validation.js
(+2 files in other folders)
