[package]
name = "rds"
version = "0.4.5"
edition = "2021"
description = "A memory-efficient dependency analyzer for JavaScript, TypeScript, and Vue projects"

[[bin]]
name = "rds"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Async runtime
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync", "signal", "time"] }

# File operations
glob = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Regex for parsing
regex = "1.0"

# Parallel processing
rayon = "1.7"

# Async utilities
futures = "0.3"

# File watching
notify = "6.0"

# Terminal detection
atty = "0.2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
