[package]
name = "rds"
version = "0.5.4"
edition = "2024"
description = "A memory-efficient dependency analyzer for JavaScript, TypeScript, and Vue projects"

[[bin]]
name = "rds"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16"
indicatif = "0.18"

# Async runtime
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync", "signal", "time"] }

# File operations
glob = "0.3"
walkdir = "2"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
anyhow = "1.0"

# Regex for parsing
regex = "1.11"

# Parallel processing
rayon = "1.7"

# Async utilities
futures = "0.3"

# File watching
notify = "8.2"

# Terminal detection
atty = "0.2"
once_cell = "1.20"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
temp-env = { version = "0.3", package = "temp-env", features = ["async_closure"] }
